<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarConversor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <EditText
        android:id="@+id/lblTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/purple_200"
        android:inputType="text"
        android:hint="@string/conversor"
        android:ems="30"
        android:textSize="50sp"
        android:textAlignment="center"
        android:text="Conversor"
        android:fontFamily="cursive"
        android:textColor="@color/purple_700"
        android:textStyle="bold"

 />

    <EditText
        android:id="@+id/txtChave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cota_o_ex_r_8_50"
        android:layout_marginTop="50dp"
        android:textColorHint="#474646"
        android:textColor="@color/black"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/txtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor_a_convertir"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:textColorHint="#474646"
        android:inputType="numberDecimal"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:text="@string/peso" />

    <Button
        android:id="@+id/btnReal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/real" />

    <Button
        android:id="@+id/btnDolar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/dolar" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:textColor="@color/black"
        android:text="0,00"
        android:textSize="35sp" />

    <Button
        android:id="@+id/btnLimpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:backgroundTint="#6C6B6B"
        android:text="@string/limpar_valores"
        android:textColor="@color/black" />


</LinearLayout>


